// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`creates the correct current page links with generateHeaderLinks, passing through / as current page 1`] = `
Array [
  <ForwardRef
    className="currentPage header-link hover"
    to="/"
  >
    Home
  </ForwardRef>,
  <ForwardRef
    className=" header-link hover"
    to="/about"
  >
    About
  </ForwardRef>,
  <ForwardRef
    className=" header-link hover"
    to="/portfolio"
  >
    Portfolio
  </ForwardRef>,
  <ForwardRef
    className=" header-link hover"
    to="/music"
  >
    Music
  </ForwardRef>,
]
`;

exports[`creates the correct current page links with generateHeaderLinks, passing through /about as current page 1`] = `
Array [
  <ForwardRef
    className=" header-link hover"
    to="/"
  >
    Home
  </ForwardRef>,
  <ForwardRef
    className="currentPage header-link hover"
    to="/about"
  >
    About
  </ForwardRef>,
  <ForwardRef
    className=" header-link hover"
    to="/portfolio"
  >
    Portfolio
  </ForwardRef>,
  <ForwardRef
    className=" header-link hover"
    to="/music"
  >
    Music
  </ForwardRef>,
]
`;

exports[`creates the correct current page links with generateHeaderLinks, passing through an unsupported destination current page 1`] = `
Array [
  <ForwardRef
    className=" header-link hover"
    to="/"
  >
    Home
  </ForwardRef>,
  <ForwardRef
    className=" header-link hover"
    to="/about"
  >
    About
  </ForwardRef>,
  <ForwardRef
    className=" header-link hover"
    to="/portfolio"
  >
    Portfolio
  </ForwardRef>,
  <ForwardRef
    className=" header-link hover"
    to="/music"
  >
    Music
  </ForwardRef>,
]
`;

exports[`renders header correctly with no currentPage being passed through 1`] = `
<div
  className="Header"
>
  <link
    href="https://fonts.googleapis.com/css?family=Bebas+Neue&display=swap"
    rel="stylesheet"
  />
  <div
    className="header-content"
  >
    <div
      className="social-container"
    >
      <SocialList />
    </div>
    <div
      className="links-container"
    >
      <div
        className="links"
      >
        <div
          className="links-inner-container"
        >
          <Link
            className=" header-link hover"
            key="/"
            to="/"
          >
            Home
          </Link>
          <Link
            className=" header-link hover"
            key="/about"
            to="/about"
          >
            About
          </Link>
          <Link
            className=" header-link hover"
            key="/portfolio"
            to="/portfolio"
          >
            Portfolio
          </Link>
          <Link
            className=" header-link hover"
            key="/music"
            to="/music"
          >
            Music
          </Link>
        </div>
      </div>
    </div>
  </div>
</div>
`;
